@@ -602,6 +602,7 @@ version 28-git (????-??-??):
   - enhancement: add assignment note field, user assignment description [interduo]
   - enhancement: added division filter in new message form [chilan]
   - enhancement: added office address, url and userpanel url properties to divisions [chilan]
+  - enhancement: {button data_confirmation_text="some question?"} needs to be confirmed by dialog
 
 version 27.0 (2021-08-20):
 
